[package]
name = "scheduler"
version = "0.1.0"
authors = ["Alice"]
edition = "2018"

[dependencies]
libsyscalls = { path = "../../../lib/core/libsyscalls" }
syscalls = { path = "../../../lib/core/interfaces/syscalls" }
interface = { path = "../../../interface/generated" }
console = { path = "../../../lib/core/console" }
malloc = { path = "../../../lib/core/malloc" }

[dependencies.lazy_static]
version = "1.3.0"
features = ["spin_no_std"]

[dependencies.num-traits]
version = "0.2.8"
default-features = false